--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,70 +4,54 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.ts.testcases.TC_Others</td>
+<td>com.iBridge.sme.testcases.TC_InsufficientBridgeSme_01</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>AdvanceEMailVerification</td>
+<td>verifyInsufficientpendingForFulfilment</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>cowinLinkGeneration</td>
+<td>verifyInsufficiencyFulfillment</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>LivenessVerification</td>
+<td>verifyInsufficientVerifier</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>Court_CheckVerification</td>
+<td>verifyCostApprovalRequiredInsufficient</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>PEPverification</td>
+<td>verifyApprovalRequiredInsufficient</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>ComprehensiveEmailverification</td>
+<td>verifyApprovalRequiredAndInsufficientBoth</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>AdvNameAddressMatch</td>
+<td>verifywithdrawCaseStatusClosedByClient</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>EmployementCheckEPFOverification</td>
+<td>verifyAdminUserReasonInsufficientBoth</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>EMail</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>NameMatch</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>Email_PhoneVerification</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>basicEmailVerification</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>DocumentClassification</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>FaceMatch</td>
+<td>verifyInsufficientCasesPresentOrNot</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>setup</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
@@ -77,4 +61,8 @@
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>tearDown</td>
+<td>&nbsp;</td></tr>
 </table>
