--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,26 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="96c360">  <td>22/06/10 17:34:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Others.AdvNameAddressMatch()[pri:1, instance:com.ts.testcases.TC_Others@10a9d961]">AdvNameAddressMatch</td> 
-  <td>main@1234586997</td>   <td></td> </tr>
-<tr bgcolor="96c360">  <td>22/06/10 17:34:15</td>   <td>14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Others.AdvanceEMailVerification()[pri:1, instance:com.ts.testcases.TC_Others@10a9d961]">AdvanceEMailVerification</td> 
-  <td>main@1234586997</td>   <td></td> </tr>
-<tr bgcolor="96c360">  <td>22/06/10 17:34:15</td>   <td>18</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Others.Court_CheckVerification()[pri:1, instance:com.ts.testcases.TC_Others@10a9d961]">Court_CheckVerification</td> 
-  <td>main@1234586997</td>   <td></td> </tr>
-<tr bgcolor="96c360">  <td>22/06/10 17:34:15</td>   <td>32</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Others.DocumentClassification()[pri:1, instance:com.ts.testcases.TC_Others@10a9d961]">DocumentClassification</td> 
-  <td>main@1234586997</td>   <td></td> </tr>
-<tr bgcolor="96c360">  <td>22/06/10 17:34:15</td>   <td>35</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Others.EMail()[pri:1, instance:com.ts.testcases.TC_Others@10a9d961]">EMail</td> 
-  <td>main@1234586997</td>   <td></td> </tr>
-<tr bgcolor="96c360">  <td>22/06/10 17:34:15</td>   <td>39</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Others.Email_PhoneVerification()[pri:1, instance:com.ts.testcases.TC_Others@10a9d961]">Email_PhoneVerification</td> 
-  <td>main@1234586997</td>   <td></td> </tr>
-<tr bgcolor="96c360">  <td>22/06/10 17:34:15</td>   <td>42</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Others.FaceMatch()[pri:1, instance:com.ts.testcases.TC_Others@10a9d961]">FaceMatch</td> 
-  <td>main@1234586997</td>   <td></td> </tr>
-<tr bgcolor="96c360">  <td>22/06/10 17:34:15</td>   <td>45</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Others.LivenessVerification()[pri:1, instance:com.ts.testcases.TC_Others@10a9d961]">LivenessVerification</td> 
-  <td>main@1234586997</td>   <td></td> </tr>
-<tr bgcolor="96c360">  <td>22/06/10 17:34:15</td>   <td>53</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Others.NameMatch()[pri:1, instance:com.ts.testcases.TC_Others@10a9d961]">NameMatch</td> 
-  <td>main@1234586997</td>   <td></td> </tr>
-<tr bgcolor="96c360">  <td>22/06/10 17:34:15</td>   <td>56</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Others.basicEmailVerification()[pri:1, instance:com.ts.testcases.TC_Others@10a9d961]">basicEmailVerification</td> 
-  <td>main@1234586997</td>   <td></td> </tr>
-<tr bgcolor="96c360">  <td>22/06/10 17:34:15</td>   <td>62</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Others.cowinLinkGeneration()[pri:1, instance:com.ts.testcases.TC_Others@10a9d961]">cowinLinkGeneration</td> 
-  <td>main@1234586997</td>   <td></td> </tr>
+<tr bgcolor="8aa6b8">  <td>21/03/04 17:32:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_InsufficientBridgeSme_01.verifyInsufficientVerifier()[pri:1, instance:com.iBridge.sme.testcases.TC_InsufficientBridgeSme_01@652ce654]">verifyInsufficientVerifier</td> 
+  <td>main@737085888</td>   <td></td> </tr>
 </table>
